Projet GL/test/src/test/deca/codegen/invalid/created/ima/divzero.ass
	ADDSP #3
	TSTO #3
	BOV stack_overflow_error
; Code de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Start main program
; Variables declarations:
	LOAD #1, R2
	LOAD #0, R3
	CMP #0, R3
	BEQ division_by_zero_error
	QUO R3, R2
	FLOAT R2, R2
	STORE R2, 3(GB)
; Beginning of main instructions:
	HALT
; End main program
code.Object.equals:
	LOAD -2(LB), R0
	CMP -3(LB), R0
	SEQ R0
	RTS
division_by_zero_error:
	WSTR "Error: Division by Zero"
	WNL
	ERROR
stack_overflow_error:
	WSTR "Error: Stack Overflow"
	WNL
	ERROR
